--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         }
     </script>
 
-    <script>
+   <script>
     document.getElementById("weatherForm").addEventListener("submit", async function(event) {
         event.preventDefault();
         const form = event.target;
@@ -167,7 +167,8 @@
                 const bounds = coordinates.reduce((bounds, coord) => bounds.extend(coord), new mapboxgl.LngLatBounds(coordinates[0], coordinates[0]));
                 map.fitBounds(bounds, { padding: 20 });
 
-               loadingMessage.style.display = 'none';
+                loadingMessage.style.display = 'none'; // Remove extra closing parenthesis here
+            }); // Remove extra closing parenthesis here
         } catch (error) {
             console.error('Error:', error);
             loadingMessage.style.display = 'none';
@@ -175,6 +176,7 @@
         }
     });
 </script>
+
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAS72566eF3MF9HZ3HhUq4tuflB-0iJibE&libraries=places&callback=initAutocomplete" async defer></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
