--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report Form</title>
-   <style>
+  <style>
         body { margin: 0; padding: 0; }
         #map { position: absolute; top: 0; bottom: 0; width: 100%; height: 500px; z-index: 1; } /* Set map height and z-index */
         #formContainer { position: relative; z-index: 2; background-color: white; padding: 20px; } /* Set z-index and styling for the form container */
         h1, h2 { position: relative; z-index: 2; } /* Set z-index for headings */
+        #submissionMessage { display: none; position: relative; z-index: 2; background-color: #e0f7f1; padding: 10px; margin-top: 20px; }
     </style>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 </head>
@@ -167,14 +168,15 @@
                 const bounds = coordinates.reduce((bounds, coord) => bounds.extend(coord), new mapboxgl.LngLatBounds(coordinates[0], coordinates[0]));
                 map.fitBounds(bounds, { padding: 20 });
 
-                loadingMessage.style.display = 'none'; // Remove extra closing parenthesis here
-            }); // Remove extra closing parenthesis here
-        } catch (error) {
-            console.error('Error:', error);
-            loadingMessage.style.display = 'none';
-            eventContainer.innerHTML = '<p>Error fetching weather data.</p>';
-        }
-    });
+               const submissionMessage = document.getElementById('submissionMessage');
+                submissionMessage.style.display = 'block';
+                form.style.display = 'none'; // Hide the form after submission
+            } catch (error) {
+                console.error('Error:', error);
+                loadingMessage.style.display = 'none';
+                eventContainer.innerHTML = '<p>Error fetching weather data.</p>';
+            }
+        });
 </script>
 
 
