--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         #formContainer { position: relative; z-index: 2; background-color: white; padding: 20px; }
         h1, h2 { position: relative; z-index: 2; }
         #submissionMessage { display: none; position: relative; z-index: 2; background-color: #e0f7f1; padding: 10px; margin-top: 20px; }
+        .weather-icon {width: 50px; height: 50px;}
     </style>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 </head>
@@ -121,7 +122,7 @@
                         <p>Date: ${eventDate}</p>
                         <p>Type: ${weatherType}</p>
                         <p>Magnitude: ${magnitude}</p>
-                        <img src="${iconUrl}" alt="icon">
+                        <p><img class="weather-icon" src="${iconUrl}" alt="icon"></p>
                     `;
                     eventContainer.appendChild(eventElement);
                 }
