--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <button type="submit">Submit</button>
         </form>
     </div>
+    <div id="loadingMessage" style="display: none;">Accessing Satellite Data, please wait...</div>
     <div id="eventContainer"></div>
     <div id="map"></div>
 
