--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
     <style>
         .gradient-bg {
-            background: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+            background: linear-gradient(120deg, #000042 0%, #000053 100%);
         }
         #map {
             height: 400px;
@@ -47,8 +47,8 @@
     <div class="container mx-auto px-4 py-8">
         <!-- Header -->
         <header class="text-center mb-12">
-            <h1 class="text-4xl font-bold text-gray-800 mb-2">Severe Weather Data</h1>
-            <p class="text-gray-600"Assess the risk of any roof in the US based on severe weather events</p>
+            <h1 class="text-4xl font-bold text-gray-800 mb-2">Roof Condition Analysis</h1>
+            <p class="text-gray-600">Assess the risk of any roof in the US</p>
         </header>
 
         <!-- Search Form -->
